--- a/koding.html
+++ b/koding.html
@@ -10,8 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="perlogoan/logo/favicon.ico">
-
+    <link rel="icon" type="ico" sizes="32x32" href="assets/images/favicon.ico">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
