--- a/index.html
+++ b/index.html
@@ -54,16 +54,28 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active" data-interval="5000">
-            <img src="assets/images/fab.jpg" class="d-block w-100" alt="#">
+            <img src="assets/images/fae.jpg" class="d-block w-100" alt="#">
           </div>
           <div class="carousel-item" data-interval="5000">
-            <img src="assets/images/fac.JPG" class="d-block w-100" alt="#">
+            <img src="assets/images/faz.JPG" class="d-block w-100" alt="#">
+          </div>
+          <div class="carousel-item" data-interval="5000">
+            <img src="assets/images/faj.jpg" class="d-block w-100" alt="#">
           </div>
           <div class="carousel-item" data-interval="5000">
             <img src="assets/images/fad.jpg" class="d-block w-100" alt="#">
+          </div>
+          <div class="carousel-item" data-interval="5000">
+            <img src="assets/images/fbd.jpg" class="d-block w-100" alt="#">
+          </div>
+          <div class="carousel-item" data-interval="5000">
+            <img src="assets/images/fav.jpg" class="d-block w-100" alt="#">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
