--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <img src="assets/images/fae.jpg" class="d-block w-100" alt="#">
           </div>
           <div class="carousel-item" data-interval="5000">
-            <img src="assets/images/faz.JPG" class="d-block w-100" alt="#">
+            <img src="assets/images/faz.jpg" class="d-block w-100" alt="#">
           </div>
           <div class="carousel-item" data-interval="5000">
             <img src="assets/images/faj.jpg" class="d-block w-100" alt="#">
