--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active" data-interval="5000">
@@ -64,6 +65,9 @@
           </div>
           <div class="carousel-item" data-interval="5000">
             <img src="assets/images/fbe.jpg" class="d-block w-100" alt="#">
+          </div>
+          <div class="carousel-item" data-interval="5000">
+            <img src="assets/images/faz.jpg" class="d-block w-100" alt="#">
           </div>
           <div class="carousel-item" data-interval="5000">
             <img src="assets/images/faj.jpg" class="d-block w-100" alt="#">
