--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a class="nav-link" href="https://drive.google.com/drive/folders/1PE0CfIgJb_E552aJOT3fDto2pp6uMkdE">Dokumentasi</a>
             <a class="nav-link" href="about.html">Anggota</a>
             <a class="nav-link" href="koding.html">Kodingan</a>
+            <a class="nav-link" href="tebak.html">Game</a>
           </div>
         </div>
         <form class="d-flex">
