--- a/tebak.html
+++ b/tebak.html
@@ -6,6 +6,7 @@
     <title>Main Tebak Tanggal Lahir</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style1.css">
+    <link rel="icon" type="ico" sizes="32x32" href="assets/images/favicon.ico">
 </head>
 <body>
 
