--- a/tebak.html
+++ b/tebak.html
@@ -52,10 +52,11 @@
     </ul>
     <p>Masukkan kode huruf sesuai dengan tanggal lahir kamu berada. Misalnya tanggal lahirmu ada pada Tabel 1 dan Tabel 2, maka kode huruf kamu adalah "ab"</p>
 
-    <div class="input">
-		<input type="text" id="codeHuruf" name="codeHuruf" />
-		<button id="hitung">hitung</button>
-	</div>
+    <form class="input">
+        <label for="codeHuruf">Tulis kode di sini</label>
+	<input type="text" id="codeHuruf" name="codeHuruf" />
+	<button type="hitung" class="btn btn-success btn-sm" id="hitung">hitung</button>
+    </form>
 
     	<!--Tabel 1-->
 	<div class="tabel">
