--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a class="nav-link" href="about.html">Anggota</a>
             <a class="nav-link" href="koding.html">Kodingan</a>
             <a class="nav-link" href="tebak.html">Game</a>
+            <a class="nav-link" href="bunga.html">Bunga</a>
           </div>
         </div>
         <form class="d-flex">
