--- a/flower.html
+++ b/flower.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <title>flowers</title>
 </head>
@@ -307,6 +307,6 @@
         </div>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
